2015-06-16 David Hohn <david.hohn@cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: change m_tau_nTracks to numTrack

2015-06-15 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: jets and taus now follow same Run 1 naming scheme
	* ttHMultileptonLooseEventSaver.cxx: added empty branches for truth jets (not yet available in top analysis)
	* ttHMultileptonLooseEventSaver.cxx: reverted change of name for MuonSpectrometerPt
	
2015-06-15 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: Fixed pdf info, now ok on those samples for which pdf correctly  filled 
	
2015-06-12 Dave DeMarco <david.demarco@cern.ch> 
	* ttHMultileptonLooseEventSaver.cxx/h: Pass/fail event selection variables
	for each event selection region now written to output tree (from EventSaverFlatNtuple)

2015-06-11 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver.cxx: Added pdf info (but still always zero -- to be validated)
	* ttHMultileptonLooseEventSaver.cxx: Added trigger matching variables for two muon items
	* generic_config-mc15.txt: set PDF info to truth; added trigger dummy selections to 
	activate trigger matching tool
	
2015-06-09 David Hohn <david.hohn@cern.ch>
	* disabling TauTruthMatchingTool, current version is leaking

2015-06-09 Giuseppe Salamanna <salaman AT cern.ch>
	* Call MET variables same way as Run 1
	
2015-06-09 Giuseppe Salamanna <salaman AT cern.ch>
	* Change of variable names for EventNumber,RunNumber,averageIntPerXing,mc_channel_number
	and addition of actualIntPerXing - using same naming as Run 1
	
2015-06-08 Peter Onyisi <ponyisi AT cern.ch>
	* Enable running on data (do not try to make loose tree)

2015-06-08 David Hohn <david.hohn@cern.ch>
	* protect data from TauTruthMatchingTool
	
2015-06-05 David Hohn <david.hohn@cern.ch>
	* update to Top,2.3.13, needed for a newer version of TauTruthMatchingTool
	* implement TauTruthMatchingTool, fix type of some tau variables
	